<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.lo_encontrecom.appeniclients.LoginGasActivity">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleLogin"
        android:textColor="@color/ColorTextTitle"
        android:textSize="@dimen/titleSize"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/lblWelcomeLema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitleLogin"
        android:textColor="@color/colorForeground"
        android:textSize="16sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo_eni" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/width"
        android:hint="@string/lblPlaceholderLoginUser"
        android:inputType="number"
        android:layout_marginBottom="@dimen/lblMargin"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/width"
        android:inputType="textPassword"
        android:hint="@string/lblPlaceholderLoginPassword"
        android:layout_marginBottom="@dimen/lblMargin"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/border_btn_lyrics"
        android:text="@string/btnEnter"
        android:textSize="@dimen/btnSize"
        android:textColor="@color/ColorTextTitle"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:text="@string/btnSignIn"
        android:textSize="16sp"
        android:onClick="signIn"
        android:textColor="@color/ColorTextTitle"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btnForgetPassword"
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="@color/ColorTextTitle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@null"/>


</LinearLayout>
